--- a/week8/practice_numpy_v2.ipynb
+++ b/week8/practice_numpy_v2.ipynb
@@ -426,8 +426,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solutions: d is a shallow copy of a. "
+    "Solutions: d is a shallow copy of a. \n",
+    "\n",
+    "View references the existing object in memory. Copying creates a new object in memory with the same value."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
