--- a/practical10/Assignment 2.ipynb
+++ b/practical10/Assignment 2.ipynb
@@ -40,7 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here!"
+    "To convey inforation, written or spoken text has no exact rules, which can be programmed into an algorithm to process the meaning of the text. For example, same sentences can mean different things when put into a different context. Sentences are unstructured. \n",
+    "\n",
+    "This is in contrast to numerical data, which has specific numerical and definite meaning about it, which can be extracted in a straight forward way using an algorithm."
    ]
   },
   {
@@ -54,7 +56,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here!"
+    "The most simple approach to process text is to create an unstrucutred bag of words in which the feature is the times a words appears in the text. The document is treated as a collection of individual words without any order. \n",
+    "To improve the bag of words we can use pre-processing to lowercase the words, remove suffixes and remove given stop words. \n",
+    "Further, we can apply techiques such as TFIDF to measure the term's importance in the given text.\n",
+    "\n",
+    "\n",
+    "A way to preserve word order is to use N-gram sequences. Using this method we include adjacent words as features into our dataset. We can use bi-grams, tri-grams, 4-grams, n-grams of respectively 2, 3 , 4, N adjacent words. It helps us get sense of word order, by directly using the adjacent words as a single feature. It is not a perfect soulution as it takes extra storage in our dataset and increases computation time exponentially."
    ]
   },
   {
@@ -68,7 +75,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here!"
+    "A way to measure the importance of a word is to use TFIDF to calculate the inverse frequecy of the words in our documents - the less a words appears across our documents, the more relative importance, we assume, it carries.\n",
+    "\n",
+    "A more straight-forward way to filter unnecesary words, which carry little to no information, is to use a stop list which will filter out common words like \"the\", \"a\", \"and\", \"of\", \"at\" etc."
    ]
   },
   {
@@ -104,7 +113,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One paragraph answer here."
+    "Laplace smoothing helps us handle the worst-case situtation of having a test document with none of its words being in the training data. If we did not use Laplace smoothing with our Naive Bayes, during training, we would get a zero probability of an unseen document/sentence/word occuring - this would lead us to wrong results in our classification. \n",
+    "\n",
+    "Laplace smoothing helps us solve the above problem by giving all words at least a small non-zero probabiltiy."
    ]
   },
   {
@@ -133,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here!"
+    "Machine Learning algorithms can only process numerical data. For this reason, all non-numerical features need to be converted into numerical ones, in order to be fed into the algorithm. Depending on the type of non-numerical feature, the conversion may not lead to fully accurate representation of the given information."
    ]
   },
   {
@@ -147,7 +158,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here!"
+    "Categorical variables of the same type can be mapped into a numerical scale. For example, a mesure of satisfaction: 0-\"Bad\", 1 - \"Okay\", 2 - \"Good\", 3 - \"Excellent\". It would make sense to use this technique here since the number expresses the mesaure of satisfation correctly.\n",
+    "\n",
+    "On the other hand, if we are dealing with unrelated categories like \"type of job\" in a recruitment dataset whith features like: \"engineer\", \"accountant\", \"teacher\" etc. we cannot classify those in a sensible manner on a single scale. The ML algorith would interpret the data incorrectly, as a single variable and produce non-accurate results."
    ]
   },
   {
@@ -170,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +224,7 @@
        "'Visually disjointed and full of itself the director apparently chose to seek faux-depth to expand a 5 minute plot into an 81 minute snore-fest.  The moments that work in this film are VERY limited and the characters dont even feel real. How could you feel invested in a main protagonist who was made so surreal?  Substantively AND stylistically it all feels like a quirky dream sequence. Jarring irregular camera work awkward silences and gaps in action and whats with the little spider image crawling across the screen? Whoever thought of that needs to go back to film school. It added no meaning just cheese and didnt even stylistically work with the rest of the film (assuming the film even had a style which is a close call). What a flop.'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,13 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5011177785621838"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here"
+    "# Code here\n",
+    "\n",
+    "Y.value_counts().max() / (Y.value_counts()[0] + Y.value_counts()[1])"
    ]
   },
   {
@@ -267,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -315,20 +339,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area under the ROC curve for our classifier is 0.9201868556285202\n"
+      "Area under the ROC curve for our classifier is 0.9375122536754423\n"
      ]
     }
    ],
    "source": [
     "# Create a vectorizer that will track text as binary features\n",
-    "count_vectorizer = CountVectorizer(lowercase=True)\n",
+    "count_vectorizer = CountVectorizer(lowercase=True, ngram_range=(1, 2))\n",
     "\n",
     "# Let the vectorizer learn what tokens exist in the text data\n",
     "count_vectorizer.fit(X_text)\n",
@@ -357,17 +381,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer here!"
+    "I would consider both models with no strong prefernce of one over the other, as the results are satisfiable and nearly identical with both models.\n",
+    "\n",
+    "We could try using a TFIDF with a Naive Bayes model. I might run more tests and evalueation metrics, with "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
